--- a/index.css
+++ b/index.css
@@ -1,6 +1,18 @@
-body {
-    background-color: #3c1632;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    background-color: #3c1632;
+    font-family: "Roboto", serif;
+}
+/* För DOM-Manipulering */
 
 #start-page,
 #details-page,
@@ -11,9 +23,132 @@ body {
 #start-page.open,
 #details-page.open,
 #search-page.open {
-    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .link {
     cursor: pointer;
+}
+
+
+/* Här kommer styling */
+
+.navbar {
+    display: flex;
+    height: 10%;
+    width: auto;
+    align-items: center;
+    padding: 0px 30px;
+    background-color: #200c1b;
+}
+
+.navbar h2 {
+    font-style: italic;
+    color: #823a6f;
+    display: flex;
+    flex: 1;
+}
+
+div.centerspan {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+}
+
+div.lastspan {
+    display: flex;
+    flex: 1;
+    justify-content: end;
+}
+
+.navbar span {
+    border: 1px solid black;
+    padding: 5px;
+    background-color: #823a6f;
+    border-radius: 3rem;
+}
+
+section h1 {
+    margin: 10px;
+    color: #823a6f;
+}
+
+section p {
+    margin: 10px;
+    color: #823a6f;
+}
+
+div.randomcard {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+div.card-body h5 {
+    font-size: 1.3rem;
+    color: #c66eaf;
+}
+
+div.card-body span {
+    background-color: #c738a1;
+    padding: 4px;
+    border: 1px solid black;
+    border-radius: 3rem;
+}
+
+div.card-body button {
+    background-color: #c66eaf;
+    padding: 5px;
+}
+
+/* Styling för details-page */
+
+ul {
+    display: flex;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: whitesmoke;
+    gap: 1rem;
+}
+
+/* Styling för search-page */
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0rem;
+}
+
+form input {
+    width: 250px;
+    height: 1.5rem;
+}
+
+form button {
+    width: 50px;
+    height: 1.5rem;
+}
+
+#results p {
+    text-align: center;
+}
+
+/* Begränsa bilden sålänge */
+.card-img-top {
+    margin: 10px;
+    width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
