--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ form button {
     text-align: center;
 }
 
-/* Begränsa bilden sålänge */
+/* Begränsa bilden */
 .card-img-top {
     margin: 10px;
     width: 300px;
